--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
     "version": "1.0.0",
     "scripts": {
         "client": "cd client && yarn start",
-        "server": "node index.js",
-        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+        "server": "nodemon index.js",
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+        "start": "node server.js",
+        "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "body-parser": "^1.18.3",
+        "bootstrap": "^4.6.0",
+        "chart.js": "^2.9.4",
         "express": "^4.16.4",
-        "mongoose": "^5.11.12"
+        "mongoose": "^5.11.12",
+        "react-chartjs-2": "^2.11.1"
     },
     "devDependencies": {
         "concurrently": "^4.0.1",
